amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/inexistent-argument.api.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/inexistent-argument.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 1

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/core#unresolved-reference
  Message: Unresolved reference 'Unit'
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/inexistent-argument.api.graphql#/shape/Starship/length/request/parameter/unit/unresolved
  Property: 
  Range: [(12,17)-(12,17)]
  Location: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/inexistent-argument.api.graphql
